compiler/weave_syntax/tests/data/syntax/expressions/is-as-expr-0001.error
error: Unexpected tokens
        --> <source>:4:12
         |
       4 | if (x is Y z) {
         |            ^
error: Expected '[token:identifier]'
        --> <source>:8:17
         |
       8 | consume(a, b, c,);
         |                 ^
